# system_integration

./: .gitignore
01_Miscellaneous/: getgoogle.sh  google.html  google.js  paymentiframe.html
02_Data_Files/: me.csv  me.json  me.xml  me.yaml
03_Modules/html_no_modules/: index.html  index.js  myModule.js
03_Modules/html_with_modules/: index.html  myModule.js
03_Modules/node_commonjs_modules/: index.js  myModule.js
03_Modules/node_es_modules/: myModule.js
03_Modules/python_modules/: main.py
04_Encoding_Decoding/node/: index.js
04_Encoding_Decoding/python/: encoding.py
05_python_environments/: main.py
06_Servers/node/: app.js  package-lock.json  package.json
06_Servers/python/: main.py  pyproject.toml
08_Server-To-Server/node/: app.js  package-lock.json  package.json
08_Server-To-Server/python/: main.py  pyproject.toml
09_Environment_Variables/node/: .env-dev  index.js  package-lock.json  package.json
09_Environment_Variables/python/: main.py  pyproject.toml
10_Date/node/: index.js
10_Date/python/: main.py
11_Short_Polling/node/: app.js  package-lock.json
13_Server-sent_Events/python-sse/: main.py  pyproject.toml
13_Server-sent_Events/python-sse/templates/: index.html
15_Github_Webhooks/python-webhooks/: main.py  pyproject.toml
27_Web_Scraping_Crawling/02_Python_basic_web_scraper/: main.py  pyproject.toml
exercises/02a_data_parsing_server/python/data_parsing_server/: pyproject.toml
exercises/02a_data_parsing_server/python/data_parsing_server/data_parsing_server/: app.py
exercises/02a_data_parsing_server/python/data_parsing_server/data_parsing_server/parsers/: __init__.py  csv.py  json.py  txt.py  xml.py  yaml.py
(+110 files in other folders)
