[tool.poetry]
name = "python-sse"
version = "0.1.0"
description = ""
authors = ["masp9 <mart2c04@stud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
unicorn = "^2.0.1.post1"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
